// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot - error 1`] = `
<Message
  className=""
  title="Error"
  type="error"
>
  Test
</Message>
`;

exports[`matches enzyme snapshots matches snapshot - with options 1`] = `
<article
  className="Message Message-has-icon tip TestMessage"
>
  <AccentText
    weight="bold"
  >
    <div
      className="Message-header"
    >
      <p>
        Test Message
      </p>
    </div>
  </AccentText>
  <div
    className="Message-body"
  >
    <Memo()
      className="Message-icon"
      name="check"
      size={20}
    />
    this is a test message
  </div>
</article>
`;

exports[`matches enzyme snapshots matches snapshot 1`] = `
<article
  className="Message Message-simple"
>
  <AccentText
    weight="bold"
  />
  <div
    className="Message-body"
  >
    Test
  </div>
</article>
`;

exports[`matches test renderer snapshot serializes the styles - error 1`] = `
<article
  className="Message error"
>
  <div
    className="StyledText__StyledTextDiv-sc-1ldibmc-0 hAsENf Text"
  >
    <div
      className="Message-header"
    >
      <p>
        Error
      </p>
    </div>
  </div>
  <div
    className="Message-body"
  >
    Test
  </div>
</article>
`;
